# src/controllers/userController.js
@@ -125,8 +125,15 @@ export const updateUserProfile = expressAsyncHandler(async (req, res) => {
 // @route GET /api/users
 // @access Private
 export const getAllUsers = expressAsyncHandler(async (req, res) => {
-  const users = await User.find();
-  res.json(users);
+  const pageSize = 12;
+  const page = Number(req.query.pageNumber) || 1;
+
+  const count = await User.countDocuments();
+  const users = await User.find()
+    .limit(pageSize)
+    .skip(pageSize * (page - 1));
+
+  res.json({ users, page, pages: Math.ceil(count / pageSize) });
 });
 
 // @desc  DELETE user for admins only
